align feature icons without jumping bug

--- a/client/components/Timeline/Features.less
+++ b/client/components/Timeline/Features.less
@@ -13,7 +13,8 @@
   width: 48%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  align-content: flex-start;
+  justify-content: flex-start;
 
   .feature__img {
     width: 24%;
